# Studies---Python

./: readme.md
Async/: main.py  pyproject.toml
Design Patterns/Creational Patterns/Builder/: description.md  problem.py  solution.py
Design Patterns/Creational Patterns/Prototype/: description.md  extra.py  problem.py  solution.py
Design Patterns/Structural Patterns/Adapter/: description.md  problem.py  solution.py
